Allow byo webhooks and cert
Signed-off-by: birca <Allex21ro@yahoo.com>

--- a/charts/opentelemetry-operator/values.yaml
+++ b/charts/opentelemetry-operator/values.yaml
@@ -99,6 +99,11 @@ admissionWebhooks:
       # kind:
       # name:
 
+## BYO webhooks and certificate while disabling chart ones.
+customAdmissionWebhooks:
+  enabled: false
+  secretName: ""
+
 ## Create the provided Roles and RoleBindings
 ##
 role:
