[operator] Allow byo webhooks and cert
Signed-off-by: birca <Allex21ro@yahoo.com>

--- a/charts/opentelemetry-operator/values.yaml
+++ b/charts/opentelemetry-operator/values.yaml
@@ -85,7 +85,7 @@ kubeRBACProxy:
       memory: 64Mi
 
 ## Admission webhooks make sure only requests with correctly formatted rules will get into the Operator.
-##
+## They also enable the sidecar injection for OpenTelemetryCollector and Instrumentation CR's
 admissionWebhooks:
   failurePolicy: Fail
   enabled: true
@@ -105,6 +105,11 @@ admissionWebhooks:
     issuerRef: {}
       # kind:
       # name:
+
+## BYO webhooks and certificate while disabling chart ones. Do not enable together with admissionWebhooks.
+customAdmissionWebhooks:
+  enabled: false
+  secretName: ""
 
 ## Create the provided Roles and RoleBindings
 ##
