--- a/charts/opentelemetry-operator/templates/deployment.yaml
+++ b/charts/opentelemetry-operator/templates/deployment.yaml
@@ -74,7 +74,7 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 10
           resources: {{ toYaml .Values.manager.resources | nindent 12 }}
-          {{- if .Values.admissionWebhooks.enabled }}
+          {{- if or .Values.admissionWebhooks.enabled .Values.customAdmissionWebhooks.enabled }}
           volumeMounts:
             - mountPath: /tmp/k8s-webhook-server/serving-certs
               name: cert
@@ -111,12 +111,12 @@ spec:
       {{- end }}
       serviceAccountName: {{ template "opentelemetry-operator.serviceAccountName" . }}-controller-manager
       terminationGracePeriodSeconds: 10
-      {{- if .Values.admissionWebhooks.enabled }}
+      {{- if or .Values.admissionWebhooks.enabled .Values.customAdmissionWebhooks.enabled }}
       volumes:
         - name: cert
           secret:
             defaultMode: 420
-            secretName: {{ template "opentelemetry-operator.name" . }}-controller-manager-service-cert
+            secretName: {{ default (printf "%s-controller-manager-service-cert" (include "opentelemetry-operator.name" .)) .Values.customAdmissionWebhooks.certName }}
       {{- end }}
       securityContext:
 {{ toYaml .Values.securityContext | indent 8 }}
