--- a/charts/opentelemetry-operator/templates/service.yaml
+++ b/charts/opentelemetry-operator/templates/service.yaml
@@ -22,7 +22,7 @@ spec:
     app.kubernetes.io/name: opentelemetry-operator
     control-plane: controller-manager
 
-{{- if or .Values.admissionWebhooks.enabled .Values.customAdmissionWebhooks.enabled }}
+{{- if or .Values.admissionWebhooks.create .Values.admissionWebhooks.secretName }}
 ---
 apiVersion: v1
 kind: Service
