--- a/charts/opentelemetry-operator/templates/deployment.yaml
+++ b/charts/opentelemetry-operator/templates/deployment.yaml
@@ -28,7 +28,7 @@ spec:
             - --enable-leader-election
             {{- end }}
             - --health-probe-addr=:{{ .Values.manager.ports.healthzPort }}
-            {{- if or .Values.admissionWebhooks.enabled .Values.customAdmissionWebhooks.enabled }}
+            {{- if or .Values.admissionWebhooks.create .Values.admissionWebhooks.secretName }}
             - --webhook-port={{ .Values.manager.ports.webhookPort }}
             {{- end }}
             {{- if and .Values.manager.collectorImage.repository .Values.manager.collectorImage.tag }}
@@ -39,12 +39,8 @@ spec:
             {{-  end  }}
           command:
             - /manager
-          {{- if or (not .Values.admissionWebhooks.enabled) .Values.manager.env }}
+          {{- if .Values.manager.env }}
           env:
-            {{- if and (not .Values.admissionWebhooks.enabled) (not .Values.customAdmissionWebhooks.enabled) }}
-            - name: ENABLE_WEBHOOKS
-              value: "false"
-            {{- end }}
             {{- range $name, $value := .Values.manager.env }}
             - name: {{ $name }}
               value: {{ $value | quote -}}
@@ -56,7 +52,7 @@ spec:
             - containerPort: {{ .Values.manager.ports.metricsPort }}
               name: metrics
               protocol: TCP
-            {{- if or .Values.admissionWebhooks.enabled .Values.customAdmissionWebhooks.enabled }}
+            {{- if or .Values.admissionWebhooks.create .Values.admissionWebhooks.secretName }}
             - containerPort: {{ .Values.manager.ports.webhookPort }}
               name: webhook-server
               protocol: TCP
@@ -74,7 +70,7 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 10
           resources: {{ toYaml .Values.manager.resources | nindent 12 }}
-          {{- if or .Values.admissionWebhooks.enabled .Values.customAdmissionWebhooks.enabled }}
+          {{- if or .Values.admissionWebhooks.create .Values.admissionWebhooks.secretName }}
           volumeMounts:
             - mountPath: /tmp/k8s-webhook-server/serving-certs
               name: cert
@@ -111,12 +107,12 @@ spec:
       {{- end }}
       serviceAccountName: {{ template "opentelemetry-operator.serviceAccountName" . }}-controller-manager
       terminationGracePeriodSeconds: 10
-      {{- if or .Values.admissionWebhooks.enabled .Values.customAdmissionWebhooks.enabled }}
+      {{- if or .Values.admissionWebhooks.create .Values.admissionWebhooks.secretName }}
       volumes:
         - name: cert
           secret:
             defaultMode: 420
-            secretName: {{ default (printf "%s-controller-manager-service-cert" (include "opentelemetry-operator.name" .)) .Values.customAdmissionWebhooks.secretName }}
+            secretName: {{ default (printf "%s-controller-manager-service-cert" (include "opentelemetry-operator.name" .)) .Values.admissionWebhooks.secretName }}
       {{- end }}
       securityContext:
 {{ toYaml .Values.securityContext | indent 8 }}
