--- a/charts/opentelemetry-collector/templates/prometheusrule.yaml
+++ b/charts/opentelemetry-collector/templates/prometheusrule.yaml
@@ -33,6 +33,14 @@ spec:
       annotations:
         description: '{{`The {{ $labels.receiver }} receiver is dropping metrics at a rate of {{ humanize $value }} per second `}}'
         runbook_url: 'https://github.com/open-telemetry/opentelemetry-collector/blob/main/docs/monitoring.md#receive-failures'
+    - alert: ReceiverDroppedLogs
+      expr: rate(otelcol_receiver_refused_log_records[5m]) > 0
+      for: 5m
+      labels:
+        severity: critical
+      annotations:
+        description: '{{` The {{ $labels.receiver }} is dropping logs at a rate of {{ humanize $value }} per second `}}'
+        runbook_url: 'https://github.com/open-telemetry/opentelemetry-collector/blob/main/docs/monitoring.md#receive-failures'
     - alert: ProcessorDroppedSpans
       expr: rate(otelcol_processor_dropped_spans[5m]) > 0
       for: 2m
@@ -49,6 +57,14 @@ spec:
       annotations:
         description: '{{`The {{ $labels.processor }} processor is dropping metrics at a rate of {{ humanize $value }} per second `}}'
         runbook_url: 'https://github.com/open-telemetry/opentelemetry-collector/blob/main/docs/monitoring.md#data-loss'
+    - alert: ProcessorDroppedLogs
+      expr: rate(otelcol_processor_dropped_log_records[5m]) > 0
+      for: 5m
+      labels:
+        severity: critical
+      annotations:
+        description: '{{` The {{ $labels.processor }} is dropping logs at a rate of {{ humanize $value }} per second `}}'
+        runbook_url: 'https://github.com/open-telemetry/opentelemetry-collector/blob/main/docs/monitoring.md#data-loss'
     - alert: ExporterDroppedSpans
       expr: rate(otelcol_exporter_send_failed_spans[5m]) > 0
       for: 2m
@@ -56,7 +72,7 @@ spec:
         severity: critical
       annotations:
         description: '{{`The {{ $labels.exporter }} exporter is dropping spans at a rate of {{ humanize $value }} per second `}}'
-        runbook_url: 'https://github.com/open-telemetry/opentelemetry-collector/blob/main/docs/monitoring.md#receive-failures'
+        runbook_url: 'https://github.com/open-telemetry/opentelemetry-collector/blob/main/docs/monitoring.md#data-egress'
     - alert: ExporterDroppedMetrics
       expr: rate(otelcol_exporter_send_failed_metric_points[5m]) > 0
       for: 2m
@@ -64,7 +80,15 @@ spec:
         severity: critical
       annotations:
         description: '{{`The {{ $labels.exporter }} exporter is dropping metrics at a rate of {{ humanize $value }} per second `}}'
-        runbook_url: 'https://github.com/open-telemetry/opentelemetry-collector/blob/main/docs/monitoring.md#receive-failures'
+        runbook_url: 'https://github.com/open-telemetry/opentelemetry-collector/blob/main/docs/monitoring.md#data-egress'
+    - alert: ExporterDroppedLogs
+      expr: rate(otelcol_exporter_send_failed_log_records[5m]) > 0
+      for: 5m
+      labels:
+        severity: critical
+      annotations:
+        description: '{{` The {{ $labels.exporter }} is dropping logs at a rate of {{ humanize $value }} per second `}}'
+        runbook_url: 'https://github.com/open-telemetry/opentelemetry-collector/blob/main/docs/monitoring.md#data-egress'
     - alert: ExporterQueueSize
       expr: otelcol_exporter_queue_size > 5000
       for: 1m
@@ -75,7 +99,7 @@ spec:
         runbook_url: 'https://github.com/open-telemetry/opentelemetry-collector/blob/main/docs/monitoring.md#queue-length'
 {{- $signals := list "spans" "metric_points" "log_records" }}
 {{- range $signal := $signals }}
-    - alert: SendQueueFailed
+    - alert: SendQueueFailed{{ $signal }}
       expr: rate(otelcol_exporter_enqueue_failed_{{ $signal }}[5m]) > 0
       for: 1m
       labels:
